fix H2 size on mobile for Deutsch

--- a/components/sections/howItWorks/HowItWorks.module.scss
+++ b/components/sections/howItWorks/HowItWorks.module.scss
@@ -160,9 +160,6 @@ $animationStartsAfter: 1.5s;
 		margin-right: auto;
 		text-align: center;
 	}
-	.how h2 {
-		font-size: 36px
-	}
 }
 
 @include maxWidth(810px) {
